decal-macros/tests/ui/fail/fragment_with_children.rs
use decal::decal;

fn main() {
    let frag = decal! {
        Column {}
    };

    let _ = decal! {
        Block {
            Fragment(frag) {
                Text("child")
            }
        }
    };
}
